Update Food analysis dataframes.ipynb

--- a/Food analysis dataframes.ipynb
+++ b/Food analysis dataframes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -271,7 +271,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
    ],
    "source": [
     "#removal of columns that we won't use from the first csv\n",
-    "food_analysis_df= food_df[['Category', 'Description', 'Nutrient Data Bank Number','Data.Carbohydrate', 'Data.Cholesterol', 'Data.Fiber', 'Data.Kilocalories', 'Data.Protein', 'Data.Sugar Total', 'Data.Water', 'Data.Fat.Monosaturated Fat', 'Data.Fat.Polysaturated Fat', 'Data.Fat.Saturated Fat', 'Data.Fat.Total Lipid', 'Data.Major Minerals.Copper', 'Data.Major Minerals.Iron', 'Data.Major Minerals.Magnesium', 'Data.Major Minerals.Phosphorus','Data.Major Minerals.Potassium', 'Data.Major Minerals.Sodium', 'Data.Major Minerals.Zinc', 'Data.Vitamins.Vitamin A','Data.Vitamins.Vitamin B12', 'Data.Vitamins.Vitamin B6', 'Data.Vitamins.Vitamin C', 'Data.Vitamins.Vitamin E', 'Data.Vitamins.Vitamin K']]\n",
+    "food_analysis_df= food_df[['Category', 'Description','Data.Carbohydrate', 'Data.Cholesterol', 'Data.Fiber', 'Data.Kilocalories', 'Data.Protein', 'Data.Sugar Total', 'Data.Water', 'Data.Fat.Monosaturated Fat', 'Data.Fat.Polysaturated Fat', 'Data.Fat.Saturated Fat', 'Data.Fat.Total Lipid', 'Data.Major Minerals.Copper', 'Data.Major Minerals.Iron', 'Data.Major Minerals.Magnesium', 'Data.Major Minerals.Phosphorus','Data.Major Minerals.Potassium', 'Data.Major Minerals.Sodium', 'Data.Major Minerals.Zinc', 'Data.Vitamins.Vitamin A','Data.Vitamins.Vitamin B12', 'Data.Vitamins.Vitamin B6', 'Data.Vitamins.Vitamin C', 'Data.Vitamins.Vitamin E', 'Data.Vitamins.Vitamin K']]\n",
     "food_analysis_df.head()"
    ]
   },
@@ -774,9 +774,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:DATAVIZ] *",
+   "display_name": "Python [conda env:DATAACCM] *",
    "language": "python",
-   "name": "conda-env-DATAVIZ-py"
+   "name": "conda-env-DATAACCM-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -788,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
