--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
        "[7413 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1556,7 +1556,7 @@
        "[185325 rows x 4 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1771,7 +1771,7 @@
        "[185325 rows x 8 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1928,7 +1928,7 @@
        "[185325 rows x 4 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,8 +1941,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2083,7 +2085,7 @@
        "[185525 rows x 5 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2100,22 +2102,340 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Interesting facts "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There's a Total of 1 tables found on Corgi URL\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Extract HTML tables into DataFrames\n",
+    "html_link = \"https://corgis-edu.github.io/corgis/csv/food/\"\n",
+    "corgi=pd.read_html(html_link)\n",
+    "\n",
+    "total_tables_found=len(corgi)\n",
+    "print(f\"There's a Total of {total_tables_found} tables found on Corgi URL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>NutrientGroup</th>\n",
+       "      <th>Nutrient Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The general category of food that this item be...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A full description of this food item, includin...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A unique ID for this food item.</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alpha Carotene is a form of carotene with a Be...</td>\n",
+       "      <td>Alpha Carotene</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ash or mineral content is the portion of the f...</td>\n",
+       "      <td>Ash</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Comment   NutrientGroup  \\\n",
+       "0  The general category of food that this item be...            None   \n",
+       "1  A full description of this food item, includin...            None   \n",
+       "2                    A unique ID for this food item.            None   \n",
+       "3  Alpha Carotene is a form of carotene with a Be...  Alpha Carotene   \n",
+       "4  Ash or mineral content is the portion of the f...             Ash   \n",
+       "\n",
+       "  Nutrient Name  \n",
+       "0          None  \n",
+       "1          None  \n",
+       "2          None  \n",
+       "3          None  \n",
+       "4          None  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Create a Table to Manipulate for end Result\n",
+    "corgi_df=corgi[0]\n",
+    "corgi_df=corgi_df.drop(columns=['List of...', 'Example Value'])\n",
+    "# new data frame with split value columns \n",
+    "new = corgi_df[\"Key\"].str.split(\".\", n = 1, expand = True) \n",
+    "  \n",
+    "# making separate first name column from new data frame \n",
+    "corgi_df[\"Key1\"]= new[0] \n",
+    "  \n",
+    "# making separate last name column from new data frame \n",
+    "corgi_df[\"Key 2\"]= new[1] \n",
+    "  \n",
+    "# Dropping old Name columns \n",
+    "corgi_df.drop(columns =[\"Key\"], inplace = True) \n",
+    "  \n",
+    "# new data frame with split value columns \n",
+    "new = corgi_df[\"Key 2\"].str.split(\".\", n = 1, expand = True) \n",
+    "  \n",
+    "# making separate first name column from new data frame \n",
+    "corgi_df[\"NutrientGroup\"]= new[0] \n",
+    "  \n",
+    "# making separate last name column from new data frame \n",
+    "corgi_df[\"Nutrient Name\"]= new[1] \n",
+    "  \n",
+    "# Dropping old Name columns \n",
+    "corgi_df.drop(columns =[\"Key1\"], inplace = True) \n",
+    "corgi_df.drop(columns =[\"Key 2\"], inplace = True) \n",
+    "  \n",
+    "# df display \n",
+    "corgi_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_nutrient</th>\n",
+       "      <th>int_fact</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Fatty acids that have one double bond in the f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Lipids in which the constituent hydrocarbon ch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>A saturated fat is a type of fat in which the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>Lipids comprise a group of naturally occurring...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Copper is an essential trace element that is v...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Iron is a mineral that is naturally present in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Magnesium is an essential mineral for human nu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Phosphorus is an essential macromineral, inclu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Potassium is a mineral and electrolyte that he...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>Salt, also known as sodium chloride, is about ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Zinc is found in cells throughout the body. It...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Vitamin A is a fat soluble vitamin that is als...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Vitamin A is a fat soluble vitamin that is als...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Vitamin B12, also called cobalamin, is a water...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Vitamin B6 is involved in many aspects of macr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Vitamin C, also known as ascorbic acid and L-a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Vitamin E refers to a group of compounds that ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Vitamin K (Phylloquinone) is a group of struct...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id_nutrient                                           int_fact\n",
+       "0           8.0  Fatty acids that have one double bond in the f...\n",
+       "1           9.0  Lipids in which the constituent hydrocarbon ch...\n",
+       "2          10.0  A saturated fat is a type of fat in which the ...\n",
+       "3          11.0  Lipids comprise a group of naturally occurring...\n",
+       "5          12.0  Copper is an essential trace element that is v...\n",
+       "6          13.0  Iron is a mineral that is naturally present in...\n",
+       "7          14.0  Magnesium is an essential mineral for human nu...\n",
+       "8          15.0  Phosphorus is an essential macromineral, inclu...\n",
+       "9          16.0  Potassium is a mineral and electrolyte that he...\n",
+       "10         17.0  Salt, also known as sodium chloride, is about ...\n",
+       "11         18.0  Zinc is found in cells throughout the body. It...\n",
+       "12         19.0  Vitamin A is a fat soluble vitamin that is als...\n",
+       "13         20.0  Vitamin A is a fat soluble vitamin that is als...\n",
+       "14         21.0  Vitamin B12, also called cobalamin, is a water...\n",
+       "15         22.0  Vitamin B6 is involved in many aspects of macr...\n",
+       "16         23.0  Vitamin C, also known as ascorbic acid and L-a...\n",
+       "17         24.0  Vitamin E refers to a group of compounds that ...\n",
+       "18         25.0  Vitamin K (Phylloquinone) is a group of struct..."
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiple conditions can be set to narrow down or widen the filter\n",
+    "clean_corgi = corgi_df.loc[(corgi_df[\"NutrientGroup\"] == \"Fat\") | (corgi_df[\"NutrientGroup\"] == \"Major Minerals\") | (\n",
+    "    corgi_df[\"NutrientGroup\"] == \"Vitamins\"), :]\n",
+    "\n",
+    "clean_corgi = clean_corgi[['NutrientGroup', 'Nutrient Name', 'Comment']]\n",
+    "clean_corgi=clean_corgi.rename(columns={\"Nutrient Name\":\"nutrient_name\",\"Comment\":\"int_fact\"})\n",
+    "\n",
+    "clean_corgi=clean_corgi.merge(essential_nutrients, on=\"nutrient_name\",how='left')\n",
+    "clean_corgi= clean_corgi.dropna()\n",
+    "clean_corgi = clean_corgi.drop(['NutrientGroup','nutrient_name','id_essengroup'], axis=1)\n",
+    "clean_corgi = clean_corgi.reindex(columns=['id_nutrient','int_fact'])\n",
+    "\n",
+    "\n",
+    "clean_corgi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create Database Connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:12345@localhost:5432/food_nutrients\"\n",
+    "rds_connection_string = \"postgres:123456@localhost:5432/food_nutrients\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2129,7 +2449,7 @@
        " 'food_catalog']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2156,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2165,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2174,7 +2494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_corgi.to_sql(name='interesting_facts', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -2191,13 +2520,6 @@
    "source": [
     "food_tbl.to_sql(name='food_tbl', con=engine, if_exists='append', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
